<resources>
    <string name="app_name">MPHR Application</string>
    <string name="nume_varsta">Varsta</string>
    <string name="valoare_varsta">18-30</string>
    <string name="nume_greutate">Greutate</string>
    <string name="valoare_greutate">55-70</string>
    <string name="nume_inaltime">Inaltime</string>
    <string name="valoare_inaltime">1.60-1.70</string>
    <string name="nume_nume">Nume</string>
    <string name="valoare_nume">Ana Miriam</string>
    <string name="nume_fumat">Fumator</string>
    <string name="valoare_fumat">Da</string>
    <string name="nume_sport">Practica sport</string>
    <string name="valoare_sport">Sport in timpul liber</string>
    <string name="nume_sanatate">Probleme sanatate</string>
    <string name="valoare_sanatate">Am. Am probleme cu plamanii, am avut cancer dar acu e rezolvat.</string>
    <string name="nume_poza_puls">Denumire poza</string>
    <string name="valoare_poza_puls">valoare</string>
    <string name="nume_gen">Sex</string>
    <string name="valoare_gen">feminin</string>
    <string name="nume_afectiune">Afectiune</string>
    <string name="valoare_afectiune">cardiologica</string>
    <string name="nume_data">Data</string>
    <string name="valoare_data">2022_06_02</string>
    <string name="sugestii_id">ID Medic</string>
    <string name="nume_id">1234</string>
    <string name="sugestie_nume">Nume medic</string>
    <string name="nume_prenume">Raluca Borca</string>
    <string name="sugestii_caz">Caz puls</string>
    <string name="nume_caz">Puls normal</string>
    <string name="sugestii_sugestie">Sugestii</string>
    <string name="nume_sugestii">Totul bun. Va rugam sa o tineti tot asa. Spor la treaba!</string>
    <string name="data_ora">Data/Ora</string>
    <string name="valoare_data_ora">09 Mai 2022/10:30</string>
    <string name="poza_nume_pulsut">Denumire poza</string>
    <string name="goback">goBack</string>
    <string-array name="categorii">
        <item>Selectati tipul de utilizator</item>
        <item>Doctor</item>
        <item>Pacient</item>
    </string-array>
    <string-array name="varsta">
        <item>Selectati varsta</item>
        <item>18-30</item>
        <item>31-45</item>
        <item>46-65</item>
        <item>66+</item>
    </string-array>
    <string-array name="inaltime">
        <item>Selectati inaltime</item>
        <item>1.40-1.50</item>
        <item>1.50-1.60</item>
        <item>1.60-1.70</item>
        <item>1.70-1.85</item>
        <item>1.85+</item>
    </string-array>
    <string-array name="greutate">
        <item>Selectati greutate</item>
        <item>40-55</item>
        <item>55-70</item>
        <item>70-90</item>
        <item>90-120</item>
        <item>120+</item>
    </string-array>
    <string-array name="puls">
        <item>Selectati puls</item>
        <item>70-80</item>
        <item>80-100</item>
        <item>100-120</item>
    </string-array>
    <string-array name="fumat">
        <item>Fumator?</item>
        <item>Da</item>
        <item>Nu</item>
    </string-array>
    <string-array name="sport">
        <item>Practic sport</item>
        <item>Sport de performanta</item>
        <item>Sport in timpul liber</item>
        <item>Nu practic sport</item>
    </string-array>
    <string-array name="caz_puls">
        <item>Selectati caz</item>
        <item>Puls normal</item>
        <item>Puls ridicat</item>
        <item>Puls scazut</item>
    </string-array>
    <string-array name="gen">
        <item>Selectati sex</item>
        <item>Feminin</item>
        <item>Masculin</item>
    </string-array>
    <string-array name="Afectiune">
        <item>Selectati afectiune</item>
        <item>Pneumologica</item>
        <item>Cardiaca</item>
        <item>Locomotorie</item>
        <item>Neurologica</item>
        <item>Fiziologica</item>
        <item>Nu am</item>
    </string-array>
</resources>